--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "export": "next export",
+    "generate": "next generate"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
     "next": "10.0.6",
+    "node-fetch": "^2.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
